---------------------------------------------------------------------------------------------------
Version: 17.0.2
Date: 2019-12-15
  Features:
  Changes:
  Bugfixes:
  Info:
    - Move on to current code style and Utils library
---------------------------------------------------------------------------------------------------
Version: 17.0.1
Date: 2019-11-27
  Features:
    - If BigWinter mod is present the egg nests have a snowy feel to them.
  Changes:
    - Biters per small egg nest setting default changed from 0 to 1.
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.0
Date: 2019-03-30
  Features:
    - Initial Release
  Changes:
  Bugfixes:
  Info: