@@ -2,6 +2,7 @@
 Version: 17.0.2
 Date: 2019-12-15
   Features:
+    - Biters from egg nests will target the location of the killer of the egg nest. This is the same behaviour as artillery pieces attackign worms, etc.
   Changes:
   Bugfixes:
   Info:
